--- a/renovate-default.json5
+++ b/renovate-default.json5
@@ -3,6 +3,8 @@
   "extends": [
     "helpers:pinGitHubActionDigests"
   ],
+  "commitBodyTable": true,
+  "configMigration": true,
   "labels": [
     "dependencies"
   ],
