--- a/renovate-default.json5
+++ b/renovate-default.json5
@@ -2,17 +2,31 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "helpers:pinGitHubActionDigestsToSemver"
-dtrn
+  ],
+  "commitBodyTable": true,
+  "configMigration": true,
+  "labels": [
+    "dependencies"
+  ],
+  "prCreation": "not-pending",
+  "reviewers": [
+    "team:developers"
+  ],
   "rollbackPrs": true,
-  "timendtrndtone": "Europe/Berlin",
+  "timezone": "Europe/Berlin",
   "packageRules": [
     {
       "matchUpdateTypes": [
         "patch"
-      ],dtrndtr
+      ],
+      "groupName": "All dependencies (patch only)"
+    },
+    {
+      matchDatasources: ["docker"],
+      registryUrls: ["https://registry.k8s.io"]
+    }
   ],
   "lockFileMaintenance": {
     "enabled": true,
   },
 }
-rndtrndtrn
