--- a/renovate-default.json5
+++ b/renovate-default.json5
@@ -23,7 +23,12 @@
     },
     {
       matchDatasources: ["docker"],
-      registryUrls: ["https://registry.k8s.io"]
+      registryUrls: ["https://registry.k8s.io"],
+{
+  "registryAliases": {
+    "docker.stackable.tech/k8s/": "registry.k8s.io",
+  }
+}
     }
   ],
   "lockFileMaintenance": {
