--- a/renovate-default.json5
+++ b/renovate-default.json5
@@ -2,6 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:recommended",
+    "default:dependencyDashboardApproval",
     "helpers:pinGitHubActionDigestsToSemver"
   ],
   "commitBodyTable": true,
