--- a/renovate-default.json5
+++ b/renovate-default.json5
@@ -1,9 +1,10 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:recommended",
+    "config:best-practices",
     "default:dependencyDashboardApproval",
     "default::prConcurrentLimitNone",
+    "default:
     "helpers:pinGitHubActionDigestsToSemver"
   ],
   "commitBodyTable": true,
