--- a/renovate-default.json5
+++ b/renovate-default.json5
@@ -36,5 +36,17 @@
   ],
   "lockFileMaintenance": {
     "enabled": true
-  }
+  },
+    customManagers: [
+        {
+          "fileMatch": ["Dockerfile"],
+          "matchStrings": [
+            {
+              "matchPattern": "cargo install cargo-cyclonedx@(?<currentValue>\\d+\\.\\d+\\.\\d+)",
+              "depNameTemplate": "cargo-cyclonedx",
+              "datasourceTemplate": "crates"
+            },
+          ]
+        }
+      ]
 }
