--- a/renovate-default.json5
+++ b/renovate-default.json5
@@ -32,7 +32,7 @@
       "registryAliases": {
         "docker.stackable.tech/k8s/": "registry.k8s.io"
       }
-    },
+    }
   ],
   "lockFileMaintenance": {
     "enabled": true
@@ -46,7 +46,7 @@
       ],
       "matchStrings": [
         "# renovate: datasource=(?<datasource>[a-z-]+?)(?: depName=(?<depName>.+?))? packageName=(?<packageName>.+?)\\s(?:ENV|ARG) .+?_VERSION=(?<currentValue>.+?)\\s"
-      ],
+      ]
     },
     {
       "customType": "regex",
@@ -59,5 +59,10 @@
       ],
       "datasourceTemplate": "pypi"
     }
-  ]
+  ],
+  // As of today (2024-09-13) pre-commit support is in beta and needs to be enabled manually
+  // https://docs.renovatebot.com/modules/manager/pre-commit/
+  "pre-commit": {
+    enabled: true
+  }
 }
